# rain_collected

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  trap.cpp
benches/: callgrind.rs  compute_rain_collected_trap.rs
cpp/: CMakeLists.txt  bench.cpp  main.cpp
src/: bench.cpp  lib.rs  main.cpp  main.rs  trap.cpp
trap/: CMakeLists.txt  trap.cpp  trap.h
trap_cpp/: CMakeLists.txt  Cargo.toml  bench.cpp  build.rs  trap.cpp  trap.hpp
trap_cpp/src/: lib.rs
trap_rust/: CMakeLists.txt  Cargo.toml
trap_rust/src/: lib.rs
trap_swift/: CMakeLists.txt  Cargo.toml  build.rs  rain_collected.swift  trap_swift.h
trap_swift/src/: lib.rs
trap_zig/: Cargo.toml  build.rs  build.zig  build.zig.zon
trap_zig/src/: lib.rs  root.zig
