cmake_minimum_required(VERSION 3.28)
project(trap CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(benchmark)
add_executable(trap src/main.cpp src/trap.cpp)
add_executable(trap_bench src/trap.cpp src/bench.cpp)
target_link_libraries(trap_bench benchmark::benchmark_main)