[workspace]
members = [
    "trap_cpp",
    "trap_swift",
    "trap_rust",
    "trap_zig",
]

[package]
name = "rain_collected"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
trap_cpp = { path = "trap_cpp" }
trap_swift = { path = "trap_swift" }
trap_rust = { path = "trap_rust" }
trap_zig = { path = "trap_zig" }

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "compute_rain_collected_trap"
harness = false
