cmake_minimum_required(VERSION 3.28)
project(trap_cpp CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_library(trap_cpp STATIC trap.cpp)
target_include_directories(trap_cpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_options(trap_cpp PRIVATE -fno-exceptions -fignore-exceptions)
install(TARGETS trap_cpp DESTINATION .)
find_package(benchmark REQUIRED)
add_executable(bench bench.cpp)
target_link_libraries(bench PRIVATE trap_cpp benchmark::benchmark)